added proficiencies to getCharacter
